--- a/gtfohack/gtfohack.csproj
+++ b/gtfohack/gtfohack.csproj
@@ -14,6 +14,8 @@
     <Deterministic>false</Deterministic>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,7 +37,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Config.cs" />
     <Compile Include="loader.cs" />
     <Compile Include="menu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -54,6 +55,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\games\GTFO\GTFO_Data\Managed\DevConsoloe-ASM.dll</HintPath>
     </Reference>
+    <Reference Include="GameData-ASM">
+      <HintPath>..\..\..\..\games\GTFO\GTFO_Data\Managed\GameData-ASM.dll</HintPath>
+    </Reference>
     <Reference Include="GlobalFramework-ASM, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\games\GTFO\GTFO_Data\Managed\GlobalFramework-ASM.dll</HintPath>
@@ -64,11 +68,24 @@
       <HintPath>D:\games\GTFO\GTFO_Data\Managed\Modules-ASM.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Scenes-ASM">
+      <HintPath>..\..\..\..\games\GTFO\GTFO_Data\Managed\Scenes-ASM.dll</HintPath>
+    </Reference>
     <Reference Include="SNet_ASM, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\games\GTFO\GTFO_Data\Managed\SNet_ASM.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Buffers.4.4.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.4.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.InteropServices.RuntimeInformation" />
     <Reference Include="Unity.TextMeshPro, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -123,6 +140,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\games\GTFO\GTFO_Data\Managed\Wwise-ASM.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
